完善背单词模式，优化单词列表页面